fix overflow and menu item

--- a/wall/style/style.css
+++ b/wall/style/style.css
@@ -23,10 +23,16 @@ body {
   margin: 0;
   font-family: Copperplate, sans-serif;
   color: #fff;
-  scroll-behavior: smooth;
   overflow: hidden;
 }
-
+@media screen and (max-width: 1024px) {
+  html {
+    overflow: visible;
+  }
+  body {
+    overflow: visible;
+  }
+}
 @font-face {
   font-family: 'Copperplate';
   src: local('Copperplate_0'), local('Copperplate_0'),
